--- a/cicd_proj/adf-cicd-build-pipeline.yml
+++ b/cicd_proj/adf-cicd-build-pipeline.yml
@@ -9,7 +9,7 @@ trigger:
 - main
 
 pool:
-  vmImage: ubuntu-latest
+  name: Default
 
 variables:
   subscriptionId: '930d2a20-dc22-431d-bdde-4a2916d0096b'          # Use your subscription ID
@@ -19,13 +19,6 @@ variables:
   adfRootFolder: 'adf_universal_orchestrator_framework'                  # Use the GIT folder under which you have the ADF resources. If it's root leave as blank
 
 steps:
-
-# Installs Node 
-- task: NodeTool@0
-  inputs:
-    versionSpec: '18.x'
-  displayName: 'Install Node.js'
-
 # Installs the npm packages saved in your package.json file in the build
 - task: Npm@1
   inputs:
