--- a/cicd_proj/adf-cicd-build-pipeline.yml
+++ b/cicd_proj/adf-cicd-build-pipeline.yml
@@ -6,8 +6,10 @@
 # Build Pipeline Name: ADF CI Option 2 Build Pipeline
 
 trigger:
-- develop
-paths:
+  branches:
+    include:
+    - develop
+  paths:
     include:
     - cicd_proj
     exclude:
