--- a/cicd_proj/adf-cicd-build-pipeline.yml
+++ b/cicd_proj/adf-cicd-build-pipeline.yml
@@ -11,9 +11,9 @@ trigger:
     - develop
   paths:
     include:
-    - cicd_proj
+    - adf_universal_orchestrator_framework
     exclude:
-    - cicd_proj/README.md
+    - adf_universal_orchestrator_framework/README.md
 pool:
   name: Default
 
