--- a/cicd_proj/adf-cicd-build-pipeline.yml
+++ b/cicd_proj/adf-cicd-build-pipeline.yml
@@ -66,7 +66,7 @@ steps:
 - task: AzurePowerShell@5
   inputs:
     azureSubscription: 'adf-dev-rg'
-#    ScriptType: 'InlineScript'
-#    Inline: |
-#      Install-Module -Name Az.Accounts -Force -AllowClobber -Scope CurrentUser
-#    azurePowerShellVersion: LatestVersion
+    ScriptType: 'InlineScript'
+    Inline: |
+      Install-Module -Name Az.Accounts -Force -AllowClobber -Scope CurrentUser
+    azurePowerShellVersion: LatestVersion
